--- a/KR/index.html
+++ b/KR/index.html
@@ -200,6 +200,15 @@
 }
 
   </style>
+
+<script>
+  function goLang(url) {
+    if (url) {
+      window.location.href = url;
+    }
+  }
+</script>
+
 </head>
 <body>
 <!-- 헤더 네비게이션 바 (얇고 작은 스타일) -->
@@ -271,7 +280,7 @@ function shareSite() {
 </script>
       </p>
       <p class="top-link">
-        <a href="https://2048global.com/vpn/index.html" target="_blank" rel="noopener">
+        <a href="https://2048global.com/KR/vpn/index.html" target="_blank" rel="noopener">
           혹시? 익명으로 전 세계를 탐험하고 싶나요?
         </a>
       </p>
