--- a/KR/index.html
+++ b/KR/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
+<meta name="naver-site-verification" content="907309a9759c57d67cd81f19709282c0a72d3211" />
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9891583086388017"
      crossorigin="anonymous"></script>
 <!-- Google tag (gtag.js) -->
@@ -10,7 +11,7 @@
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-20YHHF4D48');
+  gtag('config', 'G-F00NF909N7');
 </script>
 
   <meta charset="utf-8" />
@@ -24,7 +25,7 @@
 <meta property="og:title" content="2048 Korea! 과연 니가 깰 수 있을까?">
 <meta property="og:description" content="2048 Korea! 과연 니가 깰 수 있을까?">
 <meta property="og:url" content="https://2048global.com/KR">
-<meta property="og:image" content="https://2048global.com/KR/og-image.png">
+<meta property="og:image" content="https://2048global.com/KR/og-image.jpg">
 <meta property="og:image:width" content="1200">
 <meta property="og:image:height" content="630">
 
@@ -32,7 +33,7 @@
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:title" content="2048 Korea! 과연 니가 깰 수 있을까?">
 <meta name="twitter:description" content="2048 Korea! 과연 니가 깰 수 있을까?">
-<meta name="twitter:image" content="https://2048global.com/KR/og-image.png">
+<meta name="twitter:image" content="https://2048global.com/KR/og-image.jpg">
 
 <!-- 파비콘/앱 아이콘 -->
 <link rel="icon" href="/favicon.ico">
