--- a/index.html
+++ b/index.html
@@ -287,6 +287,11 @@ function shareSite() {
           Want to explore the world anonymously?
         </a>
       </p>
+           <p class="top-link">
+        <a href="https://scarlett-voss.com" target="_blank" rel="noopener">
+          Chat with Scarlett
+        </a>
+      </p>
     </div>
 
     <header>
@@ -560,3 +565,4 @@ function shareSite() {
   </script>
 </body>
 </html>
+
