--- a/index.html
+++ b/index.html
@@ -192,6 +192,13 @@
       .board { gap: 8px; padding: 8px; }
     }
 
+       
+  /* === 링크 줄 간격 줄이기 === */
+  .top-link a,
+  .below-cta a {
+    line-height: 1.2;   /* 글자 줄 간격 줄이기 */
+    display: inline-block;
+  }
   </style>
 </head>
 <body>
@@ -555,6 +562,7 @@ function shareSite() {
   </script>
 </body>
 </html>
+
 
 
 
