--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     /* ===== Top/Bottom notices ===== */
     .top-block {
       margin: 8px 0 14px;
-      line-height: 1.5;
+      line-height: 0.5;
     }
     .top-main {
       margin: 0 0 6px;
@@ -192,7 +192,7 @@
       .board { gap: 8px; padding: 8px; }
     }
 
-
+</style>
 </head>
 <body>
 <!-- 헤더 네비게이션 바 (얇고 작은 스타일) -->
@@ -555,6 +555,7 @@ function shareSite() {
   </script>
 </body>
 </html>
+
 
 
 
