--- a/sol/index.html
+++ b/sol/index.html
@@ -4,13 +4,13 @@
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9891583086388017"
      crossorigin="anonymous"></script>
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-20YHHF4D48"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-F00NF909N7"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-20YHHF4D48');
+  gtag('config', 'G-F00NF909N7');
 </script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -114,3 +114,4 @@ Invite your friends and Spread this game across the globe!!!<br><br>
 </body>
 </footer>
 </html>
+
