--- a/sol/index.html
+++ b/sol/index.html
@@ -99,7 +99,9 @@
 <body>
   <div class="container">
     <h1>2048 Global on Solana</h1>
-    <p>CA : 8yqd5qVnhCDVGdvBk1zokoc8JCbfpoKxTPZGpUV4pump</p>
+    <p>CA : Haq3XSNfeDfhxzmFrXRMsL9BuB2uQQzHKSnmUUiypump</p>
+       <br>
+       <p>Ticker : 2048G</p>
 <B>Tokenomics :<br>
 70% of the ad revenue generated from<br> <a href="https://2048global.com" target="_blank" style="color: #fff;">2048global.com</a><br> will be used to buy back & burn $2K48.<br>
 So, Holders!<br>
@@ -114,4 +116,5 @@ Invite your friends and Spread this game across the globe!!!<br><br>
 </body>
 </footer>
 </html>
+
 
