--- a/index.html
+++ b/index.html
@@ -315,8 +315,8 @@ function shareSite() {
         </a>
       </p>
            <p class="below-cta">
-        <a href="https://scarlett-voss.com" target="_blank" rel="noopener">
-          Chat with Scarlett
+        <a href="https://chat-with-stranger.com/EN/" target="_blank" rel="noopener">
+          Random chat with stranger
         </a>
       </p>
     <p class="below-cta">
@@ -555,6 +555,7 @@ function shareSite() {
   </script>
 </body>
 </html>
+
 
 
 
