--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@ function shareSite() {
         </a>
       </p>
            <p class="below-cta">
-        <a href="https://chat-with-stranger.com/EN/" target="_blank" rel="noopener">
+        <a href="https://chat-with-stranger.com" target="_blank" rel="noopener">
           Random chat with stranger
         </a>
       </p>
@@ -555,6 +555,7 @@ function shareSite() {
   </script>
 </body>
 </html>
+
 
 
 
