--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 </script>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>2048 Global Web version game</title>
-<meta name="description" content="Can you beat it? 2048 Global web version game">
+  <title>2048 Web Version Game – Play the Classic 2048 Online Free | 2048 Global</title>
+<meta name="description" content="Can you beat it? Play the 2048 web version game online for free. Smooth performance, fast gameplay, and multiple languages. Try the global 2048 version and reach the highest score now.">
 
 <!-- Open Graph -->
 <meta property="og:type" content="website">
@@ -555,6 +555,7 @@ function shareSite() {
   </script>
 </body>
 </html>
+
 
 
 
