--- a/AR/index.html
+++ b/AR/index.html
@@ -13,8 +13,8 @@
 </script>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>لعبة 2048 جلوبال — نسخة الويب</title>
-  <meta name="description" content="هل تستطيع هزيمتها؟ لعبة 2048 جلوبال — نسخة الويب.">
+  <title>لعبة 2048 نسخة الويب – العب 2048 أونلاين مجانًا | 2048 Global</title>
+  <meta name="description" content="استمتع بلعبة 2048 نسخة الويب مجانًا عبر الإنترنت. أداء سريع وسلس ودعم عدة لغات. جرب النسخة العالمية من 2048 الآن وحقق أعلى نتيجة.">
 
   <!-- Arabic font -->
   <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;700;800&display=swap" rel="stylesheet">
@@ -548,4 +548,5 @@ function shareSite() {
   </script>
 
 </body>
+
 </html>
