--- a/BN/index.html
+++ b/BN/index.html
@@ -14,8 +14,8 @@
   <meta charset="utf-8" />
   <meta http-equiv="Content-Language" content="bn">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>2048 গ্লোবাল ওয়েব গেম</title>
-  <meta name="description" content="চ্যালেঞ্জ নিন! 2048 গ্লোবাল ওয়েব ভার্সন—আপনি কি জিততে পারবেন?" />
+  <title>2048 ওয়েব ভার্সন গেম – অনলাইনে ফ্রি খেলুন | 2048 Global</title>
+  <meta name="description" content="ফ্রি খেলুন 2048 ওয়েব ভার্সন গেম! দ্রুত এবং মসৃণ গেমপ্লে, বহু ভাষা সাপোর্ট এবং সেরা 2048 অভিজ্ঞতা উপভোগ করুন।" />
 
   <!-- Open Graph -->
   <meta property="og:type" content="website">
@@ -583,4 +583,5 @@ function shareSite() {
   </script>
 
 </body>
+
 </html>
