--- a/CN/index.html
+++ b/CN/index.html
@@ -14,8 +14,8 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <title>2048 Global 网页版</title>
-  <meta name="description" content="你能通关吗？2048 Global 网页版。使用方向键或滑动来玩！">
+  <title>2048 网页版游戏 – 免费在线玩经典 2048 | 2048 Global</title>
+  <meta name="description" content="免费在线体验 2048 网页版游戏！操作流畅、多语言支持，享受全球最受欢迎的 2048 玩法。">
 
   <!-- Open Graph -->
   <meta property="og:type" content="website">
@@ -559,3 +559,4 @@ function shareSite() {
 
 </body>
 </html>
+
