Update print statement from 'Hello' to 'Goodbye'

--- a/ES/index.html
+++ b/ES/index.html
@@ -14,8 +14,8 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <title>2048 Global — Versión web</title>
-  <meta name="description" content="¿Puedes lograr el 2048? Versión web de 2048 Global.">
+  <title>Juego 2048 Versión Web – Juega Gratis en Línea | 2048 Global</title>
+  <meta name="description" content="¿Puedes lograr el 2048? Juega gratis al juego 2048 versión web. Rápido, fluido y disponible en varios idiomas. Disfruta la mejor experiencia global de 2048.">
 
   <!-- Open Graph -->
   <meta property="og:type" content="website">
@@ -559,3 +559,4 @@ function goLang(url) {
 
 </body>
 </html>
+
