Update print statement from 'Hello' to 'Goodbye'

--- a/FR/index.html
+++ b/FR/index.html
@@ -13,8 +13,8 @@
 </script>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>2048 Global — Version web</title>
-  <meta name="description" content="Pouvez-vous le battre ? Version web de 2048 Global.">
+  <title>Jeu 2048 Version Web – Jouez Gratuitement en Ligne | 2048 Global</title>
+  <meta name="description" content="Pouvez-vous le battre ? Jouez au jeu 2048 version web gratuitement. Gameplay fluide, rapide et multilingue. Découvrez la meilleure version mondiale de 2048.">
 
   <!-- Open Graph -->
   <meta property="og:type" content="website">
@@ -519,4 +519,5 @@ function goLang(url) {
 </script>
 
 </body>
+
 </html>
