--- a/HI/index.html
+++ b/HI/index.html
@@ -13,8 +13,8 @@
 </script>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>2048 ग्लोबल वेब गेम</title>
-  <meta name="description" content="क्या आप जीत सकते हैं? 2048 ग्लोबल वेब संस्करण गेम।">
+  <title>2048 वेब वर्शन गेम – ऑनलाइन मुफ्त में खेलें | 2048 Global</title>
+  <meta name="description" content="क्या आप जीत सकते हैं? क्लासिक 2048 वेब वर्शन गेम को ऑनलाइन मुफ्त में खेलें! तेज़, स्मूथ और मल्टी-लैंग्वेज सपोर्ट के साथ सर्वश्रेष्ठ 2048 अनुभव पाएं।">
 
   <!-- Open Graph -->
   <meta property="og:type" content="website">
@@ -562,4 +562,5 @@ function shareSite() {
   </script>
 
 </body>
+
 </html>
