Update fmt.Println message from 'Hello' to 'Goodbye'

--- a/ID/index.html
+++ b/ID/index.html
@@ -14,8 +14,8 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <title>2048 Global — Game Versi Web</title>
-  <meta name="description" content="Bisakah kamu menaklukkannya? 2048 Global versi web.">
+  <title>Game 2048 Versi Web – Main Gratis Online | 2048 Global</title>
+  <meta name="description" content="Bisakah kamu menaklukkannya? Mainkan game 2048 versi web secara gratis! Cepat, mulus, dan mendukung banyak bahasa. Nikmati pengalaman 2048 terbaik secara global.">
   <meta name="language" content="id">
 
   <!-- Open Graph -->
@@ -532,4 +532,5 @@ function shareSite() {
   </script>
 
 </body>
+
 </html>
