Update print statement to show 'Goodbye World'

--- a/IT/index.html
+++ b/IT/index.html
@@ -14,8 +14,8 @@
 </script>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>2048 Global — Versione Web</title>
-  <meta name="description" content="Riesci a batterlo? Versione web di 2048 Global.">
+  <title>Gioco 2048 Versione Web – Gioca Gratis Online | 2048 Global</title>
+  <meta name="description" content="Riesci a batterlo? Gioca gratuitamente alla versione web di 2048. Veloce, fluido e disponibile in diverse lingue. Prova la migliore versione globale di 2048.">
 
   <!-- Open Graph -->
   <meta property="og:type" content="website">
@@ -557,4 +557,5 @@ function shareSite() {
   </script>
 
 </body>
+
 </html>
