--- a/JA/index.html
+++ b/JA/index.html
@@ -14,8 +14,8 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <title>2048 Global ウェブ版</title>
-  <meta name="description" content="クリアできる？ 2048 Global のウェブ版。矢印キーまたはスワイプでプレイ！">
+  <title>2048 Web版ゲーム – 無料オンラインプレイ | 2048 Global</title>
+  <meta name="description" content="クリアできる？ 2048のWeb版ゲームを無料でプレイ！高速でスムーズ、多言語対応のグローバル版2048を楽しもう。">
 
   <!-- Open Graph -->
   <meta property="og:type" content="website">
@@ -559,3 +559,4 @@ function shareSite() {
 
 </body>
 </html>
+
