--- a/KR/index.html
+++ b/KR/index.html
@@ -16,8 +16,8 @@
 
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>2048 Korea</title>
-<meta name="description" content="2048 Korea! 과연 니가 깰 수 있을까?">
+  <title>2048 웹버전 게임 – 무료 온라인 플레이 | 2048 Global</title>
+<meta name="description" content="2048 Korea! 2048 웹버전 게임을 무료로 즐기세요! 빠르고 부드러운 플레이, 다국어 지원, 글로벌 2048 최고의 웹게임 경험을 제공합니다.">
 
 <!-- Open Graph (KakaoTalk 등) -->
 <meta property="og:type" content="website">
@@ -562,4 +562,5 @@ function shareSite() {
 
 
 </body>
+
 </html>
