--- a/MYA/index.html
+++ b/MYA/index.html
@@ -13,8 +13,8 @@
 </script>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>2048 Global — ဝက်ဘ်ဗားရှင်း ဂိမ်း</title>
-  <meta name="description" content="နိုင်မလား? 2048 Global ဝက်ဘ်ဗားရှင်း ဂိမ်း" />
+  <title>2048 ဝက်ဗ်ဗာရှင်းဂိမ်း – အွန်လိုင်းအခမဲ့ကစားရန် | 2048 Global</title>
+  <meta name="description" content="နိုင်မလား? 2048 ဝက်ဗ်ဗာရှင်းဂိမ်းကို အွန်လိုင်းအခမဲ့ကစားနိုင်ပါတယ်။ မြန်ဆန်ပြီး ပြတ်သားသောအတွေ့အကြုံ၊ ဘာသာစကားများစွာလည်းပံ့ပိုးထားပါတယ်။" />
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Myanmar:wght@400;700;800&display=swap" rel="stylesheet">
@@ -555,4 +555,5 @@ function shareSite() {
   </script>
 
 </body>
+
 </html>
