--- a/NL/index.html
+++ b/NL/index.html
@@ -13,8 +13,8 @@
 </script>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>2048 Global — Webversie</title>
-  <meta name="description" content="Kun jij ’m halen? 2048 Global webversie. Speel 2048 in je browser met pijltjestoetsen of swipe!" />
+  <title>2048 Webversie Spel – Gratis Online Spelen | 2048 Global</title>
+  <meta name="description" content="Kun jij ’m halen? Speel de 2048 webversie gratis online. Snelle, soepele prestaties en ondersteuning voor meerdere talen. Beleef de beste wereldwijde 2048-ervaring." />
 
   <!-- Open Graph -->
   <meta property="og:type" content="website">
@@ -557,4 +557,5 @@ function goLang(url) {
 
 
 </body>
+
 </html>
