--- a/PT/index.html
+++ b/PT/index.html
@@ -14,8 +14,8 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <title>2048 Global — jogo web</title>
-  <meta name="description" content="Você consegue vencer? 2048 Global — jogue no navegador usando as setas ou deslize.">
+  <title>Jogo 2048 Versão Web – Jogue Grátis Online | 2048 Global</title>
+  <meta name="description" content="Você consegue vencer? Jogue o jogo 2048 versão web gratuitamente. Rápido, fluido e com suporte multilíngue. A melhor experiência global de 2048 está aqui.">
 
   <!-- Open Graph -->
   <meta property="og:type" content="website">
@@ -557,4 +557,5 @@ function shareSite() {
   </script>
 
 </body>
+
 </html>
