--- a/RU/index.html
+++ b/RU/index.html
@@ -14,8 +14,8 @@
 </script>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>2048 Global — веб-версия игры</title>
-  <meta name="description" content="Сможешь победить? 2048 Global — веб-версия игры.">
+  <title>Игра 2048 Веб-версия – Играть Онлайн Бесплатно | 2048 Global</title>
+  <meta name="description" content="Сможешь победить? Играй бесплатно в веб-версию игры 2048! Быстрая, плавная работа и поддержка многих языков. Лучшая глобальная версия 2048.">
 
   <!-- Open Graph -->
   <meta property="og:type" content="website">
@@ -526,4 +526,5 @@ function shareSite() {
 
 
 </body>
+
 </html>
