--- a/TH/index.html
+++ b/TH/index.html
@@ -13,8 +13,8 @@
 </script>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>2048 โกลบอล — เกมเวอร์ชันเว็บ</title>
-  <meta name="description" content="คุณเอาชนะได้ไหม? 2048 โกลบอล เกมเวอร์ชันเว็บ — รวมตัวเลขให้ได้ 2048 แล้วพิสูจน์ฝีมือของคุณ!">
+  <title>เกม 2048 เวอร์ชันเว็บ – เล่นออนไลน์ฟรี | 2048 Global</title>
+  <meta name="description" content="คุณเอาชนะได้ไหม? เล่นเกม 2048 เวอร์ชันเว็บฟรี! ลื่นไหล เร็ว รองรับหลายภาษา สนุกกับ 2048 เวอร์ชันระดับโลกได้เลยตอนนี้">
 
   <!-- Thai font for better rendering -->
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Thai:wght@400;700;800&display=swap" rel="stylesheet">
@@ -532,4 +532,5 @@ function shareSite() {
 
 
 </body>
+
 </html>
