--- a/VI/index.html
+++ b/VI/index.html
@@ -13,8 +13,8 @@
 </script>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>2048 Global — bản web</title>
-  <meta name="description" content="Bạn có chinh phục được không? 2048 Global — bản web.">
+  <title>Game 2048 Phiên Bản Web – Chơi Miễn Phí Online | 2048 Global</title>
+  <meta name="description" content="Bạn có chinh phục được không? Chơi game 2048 phiên bản web miễn phí! Mượt mà, nhanh và hỗ trợ đa ngôn ngữ. Trải nghiệm phiên bản 2048 tốt nhất toàn cầu.">
 
   <!-- Open Graph -->
   <meta property="og:type" content="website">
@@ -556,4 +556,5 @@ function shareSite() {
 
 
 </body>
+
 </html>
